# GLHelper

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  FileReader.cpp  FileReader.h  ImageData.cpp  ImageData.h  ImageReader.cpp  ImageReader.h  ModelReader.cpp  ModelReader.h  README.md  SceneObject.cpp  SceneObject.h  ShaderProgram.cpp  ShaderProgram.h  TODO.txt  Texture.cpp  Texture.h
examples/: CMakeLists.txt
examples/basicscene/: CMakeLists.txt  basicscene.cpp  frag_shader_textured.glsl  vertex_shader_textured.glsl
examples/terrainscene/: CMakeLists.txt  frag_shader.glsl  terrainscene.cpp  vert_shader.glsl
