# Learning source for some stuff: http://www.opengl-tutorial.org/beginners-tutorials

add_library ("GLHelper" "SceneObject.h" "SceneObject.cpp" "ShaderProgram.h" "ShaderProgram.cpp" "FileReader.h" "FileReader.cpp"    "ImageReader.h" "ImageReader.cpp" "Texture.h" "Texture.cpp" "ImageData.h" "Camera.h" "Camera.cpp")